# Student-Attendance-Management-System

./: .env.example  LICENSE  PROJECT_SPEC.md  README.md  docker-compose.yml
.github/workflows/: main.yml
django/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  db.sqlite3  pyproject.toml  seed.py
django/academic_structure/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
django/academic_structure/migrations/: 0001_initial.py
django/accounts/: models.py  permissions.py  tests.py  urls.py  views.py
django/accounts/management/commands/: seed_db.py
django/accounts/migrations/: 0001_initial.py  0002_user_department.py  0002_user_face_embedding_user_image_blob_and_more.py  0003_alter_user_role.py  0004_user_usn.py
django/accounts/services/: __init__.py  auth_service.py  user_service.py
django/attendance/: models.py  permissions.py  tests.py  urls.py  utils.py  views.py
django/attendance/migrations/: 0001_initial.py  0002_remove_log_student_log_user_delete_student.py
django/attendance/services/: __init__.py  attendance_service.py  biometric_service.py
django/config/: asgi.py  exceptions.py  settings.py  urls.py  wsgi.py
django/config/utils/: __init__.py  helpers.py  responses.py  services.py
django/sdk/: client.py
docs/: api.md  architecture.md  deployment.md
k8s/: backend.yaml  base-config.yaml  db.yaml  frontend.yaml
react-app/: .dockerignore  .gitignore  README.md  index.html  jsconfig.json  nginx.conf  package-lock.json  package.json  tailwind.config.js
react-app/src/: App.jsx  index.css  main.jsx  theme.js
(+35 files in other folders)
